@@ -1,4 +1,8 @@
 ﻿﻿[B]Changelog[/B]
+* Updated: thumbs/fanart for DPlay (Fixes #1277)
+* Fixed: Kanal 5 and DPlay did not work (Fixes #1275)
+
+[I]Previous changes[/I]
 * Updated: thumbs/fanart for SVT, TV4 and DPlay (See #1268)
 * Added: Add season/episode info instead of "del #" to TV4 (See #1271)
 * Added: Expire date to TV4 items (See #1271 and Fixes #1269)
@@ -9,10 +13,7 @@
 * Added: Date to some videos (See #1273)
 * Changed: Filter titles for some videos to not include a date or time (See #1273)
 * Added: Some season information to shows that have it in SVT (See #1273)
-* Fixed: We removed too much episode information in ee9358b0 (See #1271)
-
-[I]Previous changes[/I]
-* Fixed: SVT "trailer" type was not recognised
+* Fixed: We removed too much episode information in ee9358b0 (See #1271)* Fixed: SVT "trailer" type was not recognised
 * Fixed: Timestamp issue with SVT
 * Fixed: SVT major API rebuild (Fixes #1254)
 * Fixed: some TV4play.se streams are now DRM protected with Widevine (Fixes #1250)
